--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Hamilton
+title: Guangcheng Wang
 description: A minimal and beautiful Jekyll theme best for writing and note-taking.
-author: Shangzhi Huang
+author: Guangcheng Wang
 avatar: /logo.png
-email: ngzhio@gmail.com
+email: wangguangcheng0428@163.com
 
 plugins:
   - jekyll-seo-tag
@@ -34,7 +34,7 @@ twitter:
   card: summary
 logo: logo.png
 social:
-  name: Shangzhi Huang
+  name: Guangcheng Wang
   links:
     - https://twitter.com/ngzhio
     - https://www.facebook.com/ngzhio
