--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Guangcheng Wang
 description: A minimal and beautiful Jekyll theme best for writing and note-taking.
 author: Guangcheng Wang
-avatar: /logo.png
+avatar: /WGC.png
 email: wangguangcheng0428@163.com
 
 plugins:
@@ -32,7 +32,7 @@ exclude:
 twitter:
   username: ngzhio
   card: summary
-logo: logo.png
+logo: WGC.png
 social:
   name: Guangcheng Wang
   links:
